tests/baselines/reference/parserSkippedTokens20.errors.txt
==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens20.ts (3 errors) ====
    var v: X<T \
               
!!! error TS1127: Invalid character.
                
!!! error TS1005: '>' expected.
           ~~~~~
!!! error TS2304: Cannot find name 'X'.